ecmascript/parser/tests/test262-error-references/fail/62d72a3c3d14d150.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/62d72a3c3d14d150.js:2:2
  |
2 | ]
  | ^

